CMAKE_MINIMUM_REQUIRED(VERSION 3.0)

PROJECT(Learn_C_Linux_Code)

set(CMAKE_RUNTIME_OUTPUT_DIRECTORY ${CMAKE_BINARY_DIR}/bin)

ADD_SUBDIRECTORY(Problem00001)
#ADD_SUBDIRECTORY(CODE_2_6)
#ADD_SUBDIRECTORY(CODE_2_7)
#ADD_SUBDIRECTORY(CREATION_MODE/Factory)
#ADD_SUBDIRECTORY(CREATION_MODE/Prototype)
#ADD_SUBDIRECTORY(CREATION_MODE/Singleton)


